removed sleep, changed links to depends_on

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -5,17 +5,19 @@ services:
     environment:
     - "POSTGRES_PASSWORD:mysecretpassword"
     volumes:
-      - db_data:/var/lib/postgresql/data
+    - db_data:/var/lib/postgresql/data
   raven:
     image: hasuranightly/raven:94a0141
     ports:
     - "8080:8080"
-    links:
-    - "postgres:postgres"
+    depends_on:
+    - "postgres"
+    restart: always
+    environment:
+    - "POSTGRES_PASSWORD:mysecretpassword"
     command: >
       /bin/sh -c "
-      sleep 5;
-      raven --database-url postgres://postgres:mysecretpassword@postgres:5432/postgres serve;
+      raven --database-url postgres://postgres:$${POSTGRES_PASSWORD}@postgres:5432/postgres serve;
       "
 volumes:
   db_data:
